[package]
name = "sand-engine"
version = "0.1.0"
authors = ["xulder"]
edition = "2018"

[[bin]]
name = "sand-engine"

[dependencies]
rand = "0.7.2"
xorshift = "0.1.3"
time = "0.2.1"
piston = "0.49.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.69.0"
image = "0.22.3"